--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>forside</title>
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main></main>
+  </body>
 </html>
