--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     <title>forside</title>
   </head>
   <body>
-<<<<<<< HEAD
-    <header></header>
-    <main></main>
-=======
-    <p>hejsa</p>
->>>>>>> d0c5fd9fc3594ba2adaf4120453af35d147d6743
+    <main>
+      <article></article>
+    </main>
   </body>
 </html>
