--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <main>
-      <article></article>
+      <article>
+        <div></div>
+      </article>
     </main>
   </body>
   <script src="script.js"></script>
