--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <article>
-        <div></div>
+        <div><h2>Hello</h2></div>
       </article>
     </main>
   </body>
