--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>forside</title>
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="mutual.css" />
+    <title>Forside</title>
   </head>
   <body>
     <main>
