--- a/destination.html
+++ b/destination.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <h3 class="filteroverskrift">Filtre</h3>
+      <h3 class="filteroverskrift">Alle</h3>
       <button data-pakker="alle" class="valgt">Alle</button>
       <button data-pakker="basic">Basic</button>
       <button data-pakker="premium">Premium</button>
@@ -21,7 +21,7 @@
 
     <template>
       <article>
-        <h3 class="rejser"></h3>
+        <h2 class="rejser"></h2>
         <h3 class="hotel"></h3>
         <h3 class="restauranter"></h3>
         <h3 class="oplevelser"></h3>
@@ -32,12 +32,18 @@
     <div id="popup">
       <article>
         <img class="billede_popup" src="" alt="" />
-        <h3 class="rejser"></h3>
+        <h2 class="rejser"></h2>
         <h3 class="hotel"></h3>
         <h3 class="restauranter"></h3>
         <h3 class="oplevelser"></h3>
         <h3 class="pris"></h3>
       </article>
     </div>
+
+    <footer>
+
+    </footer>
   </body>
+
+    <script src="script.js"></script>
 </html>
