--- a/destination.html
+++ b/destination.html
@@ -11,18 +11,19 @@
   <body>
     <header>
       <h3 class="filteroverskrift">Alle</h3>
-      <button data-pakker="alle" class="valgt">Alle</button>
-      <button data-pakker="basic">Basic</button>
-      <button data-pakker="premium">Premium</button>
-      <button data-pakker="exclusive">Exclusive</button>
+      <button data-pakke="alle" class="valgt">Alle</button>
+      <button data-pakke="Basic">Basic</button>
+      <button data-pakke="Premium">Premium</button>
+      <button data-pakke="Exclusive">Exclusive</button>
     </header>
 
     <main id="destination"></main>
 
     <template>
       <article>
-        <h2 class="rejser"></h2>
+        <h2 class="destination"></h2>
         <h3 class="hotel"></h3>
+        <h3 class="pakke"></h3>
         <h3 class="restauranter"></h3>
         <h3 class="oplevelser"></h3>
         <h3 class="pris"></h3>
@@ -32,7 +33,7 @@
     <div id="popup">
       <article>
         <img class="billede_popup" src="" alt="" />
-        <h2 class="rejser"></h2>
+        <h2 class="destination"></h2>
         <h3 class="hotel"></h3>
         <h3 class="restauranter"></h3>
         <h3 class="oplevelser"></h3>
