--- a/destination.html
+++ b/destination.html
@@ -10,11 +10,15 @@
   </head>
   <body>
     <header>
-      <h3 class="filteroverskrift">Alle</h3>
-      <button data-pakke="alle" class="valgt">Alle</button>
-      <button data-pakke="Basic">Basic</button>
-      <button data-pakke="Premium">Premium</button>
-      <button data-pakke="Exclusive">Exclusive</button>
+      <nav>
+        <h3 class="filteroverskrift">Alle</h3>
+        <div>
+          <button data-pakke="alle" class="valgt">Alle</button>
+          <button data-pakke="Basic">Basic</button>
+          <button data-pakke="Premium">Premium</button>
+          <button data-pakke="Exclusive">Exclusive</button>
+        </div>
+      </nav>
     </header>
 
     <main id="destination"></main>
@@ -22,17 +26,14 @@
     <template>
       <article>
         <h2 class="destination"></h2>
-        <h3 class="hotel"></h3>
+        <img class="billede_forside" src="" alt="" />
         <h3 class="pakke"></h3>
-        <h3 class="restauranter"></h3>
-        <h3 class="oplevelser"></h3>
         <h3 class="pris"></h3>
       </article>
     </template>
 
     <div id="popup">
       <article>
-        <img class="billede_popup" src="" alt="" />
         <h2 class="destination"></h2>
         <h3 class="hotel"></h3>
         <h3 class="restauranter"></h3>
@@ -41,10 +42,8 @@
       </article>
     </div>
 
-    <footer>
-
-    </footer>
+    <footer></footer>
   </body>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </html>
