--- a/destination.html
+++ b/destination.html
@@ -12,7 +12,7 @@
     <header>
       <nav>
         <h3 class="filteroverskrift">Alle</h3>
-        <div>
+        <div class="knapper">
           <button data-pakke="alle" class="valgt">Alle</button>
           <button data-pakke="Basic">Basic</button>
           <button data-pakke="Premium">Premium</button>
@@ -26,7 +26,7 @@
     <template>
       <article>
         <h2 class="destination"></h2>
-        <img class="billede_forside" src="" alt="" />
+        <img class="billedeforside" src="" alt="" />
         <h3 class="pakke"></h3>
         <h3 class="pris"></h3>
       </article>
