--- a/destination.html
+++ b/destination.html
@@ -26,19 +26,24 @@
     <template>
       <article>
         <h2 class="destination"></h2>
-        <img class="billedeforside" src="" alt="" />
+        <img src="" alt="" />
         <h3 class="pakke"></h3>
-        <h3 class="pris"></h3>
+        <ul>
+          <li class="beskrivelse_aktivitet"></li>
+          <li class="beskrivelse_hotel"></li>
+          <li class="beskrivelse_restaurant"></li>
+        </ul>
+        <p class="pris"></p>
       </article>
     </template>
 
     <div id="popup">
       <article>
         <h2 class="destination"></h2>
-        <h3 class="hotel"></h3>
-        <h3 class="restauranter"></h3>
-        <h3 class="oplevelser"></h3>
-        <h3 class="pris"></h3>
+        <p class="hotel">Hotel:</p>
+        <p class="restauranter">Restaurant:</p>
+        <p class="oplevelser">Activities:</p>
+        <p class="pris"></p>
       </article>
     </div>
 
