--- a/destination.html
+++ b/destination.html
@@ -28,6 +28,7 @@
         <h2 class="destination"></h2>
         <img src="" alt="" />
         <h3 class="pakke"></h3>
+        <div class="gold_line"></div>
         <ul>
           <li class="beskrivelse_aktivitet"></li>
           <li class="beskrivelse_hotel"></li>
@@ -40,9 +41,11 @@
     <div id="popup">
       <article>
         <h2 class="destination"></h2>
+        <div class="gold_line"></div>
         <p class="hotel">Hotel:</p>
         <p class="restauranter">Restaurant:</p>
         <p class="oplevelser">Activities:</p>
+        <p class="popup_beskrivelse"></p>
         <p class="pris"></p>
       </article>
     </div>
