popup vindue css påbegyndt

--- a/destination.html
+++ b/destination.html
@@ -59,10 +59,14 @@
       <article>
         <h2 class="destination"></h2>
         <div class="gold_line"></div>
-        <p class="hotel">Hotel:</p>
-        <p class="restauranter">Restaurant:</p>
-        <p class="oplevelser">Activities:</p>
-        <p class="pris"></p>
+        <div class="infoboks">
+          <img class="popup_billede1" src="" alt="" />
+          <p class="hotel">Hotel:</p>
+          <p class="restauranter">Restaurant:</p>
+          <p class="oplevelser">Activities:</p>
+          <p class="pris"></p>
+        </div>
+        <button class="bestil_rejse">Bestil rejse</button>
       </article>
     </div>
 
