--- a/destination.html
+++ b/destination.html
@@ -61,10 +61,14 @@
         <div class="gold_line"></div>
         <div class="infoboks">
           <img class="popup_billede1" src="" alt="" />
-          <p class="hotel">Hotel:</p>
-          <p class="restauranter">Restaurant:</p>
-          <p class="oplevelser">Activities:</p>
-          <p class="pris"></p>
+          <div>
+            <p class="hotel">Hotel:</p>
+            <p class="restauranter">Restaurant:</p>
+            <p class="oplevelser">Activities:</p>
+            <div class="containerline"></div>
+            <p class="popup_beskrivelse"></p>
+            <p class="pris"></p>
+          </div>
         </div>
         <button class="bestil_rejse">Bestil rejse</button>
       </article>
