ikke nogle forandring

--- a/about.html
+++ b/about.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" href="mutual.css" />
     <title>About</title>
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <h1>The story</h1>
+    <h1 id="overskrift">Behind the idea</h1>
+
+    <main>
+      <div class="grid">
+        <div class="billede">
+          <img src="fotos/about_side.webp" alt="kærestepar" />
+        </div>
+        <div class="tekst">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi velit, commodi consequatur ducimus numquam tempore, dolor, itaque earum consequuntur optio cum saepe corporis facere sapiente debitis ex possimus minus ullam sed sit. Numquam voluptatibus odio ducimus. Animi laboriosam hic dicta labore nam doloremque, perferendis porro ex voluptatum quia sequi sit rem tempore fugiat aliquid odit. Facere delectus sed sequi qui assumenda minus recusandae neque repudiandae, perferendis excepturi, nihil maiores vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi velit, commodi consequatur ducimus numquam tempore, dolor, itaque earum consequuntur optio cum saepe corporis facere sapiente debitis ex possimus minus ullam sed sit. Numquam voluptatibus odio ducimus. Animi laboriosam hic dicta labore nam doloremque, perferendis porro ex voluptatum quia sequi sit rem tempore fugiat aliquid odit. Facere delectus sed sequi qui assumenda minus recusandae neque repudiandae,
+            perferendis excepturi, nihil maiores vero
+          </p>
+        </div>
+      </div>
+    </main>
+  </body>
   <script src="script.js"></script>
 </html>
