--- a/couples.html
+++ b/couples.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="mutual.css" />
     <title>Contacts</title>
   </head>
-  <body></body>
-    <script src="script.js"></script>
+  <body>
+    <header></header>
+    <main></main>
+  </body>
+  <script src="script.js"></script>
 </html>
