--- a/destination.html
+++ b/destination.html
@@ -59,17 +59,17 @@
       <article>
         <h2 class="destination"></h2>
         <div class="gold_line"></div>
-        <div class="infoboks">
+        <div class="img-stack">
           <img class="popup_billede1" src="" alt="" />
-          <div>
-            <p class="hotel">Hotel:</p>
-            <p class="restauranter">Restaurant:</p>
-            <p class="oplevelser">Activities:</p>
-            <div class="containerline"></div>
-            <p class="popup_beskrivelse"></p>
-            <p class="pris"></p>
-          </div>
+          <img class="popup_billede2" src="" alt="" />
         </div>
+        <p class="hotel">Hotel:</p>
+        <p class="restauranter">Restaurant:</p>
+        <p class="oplevelser">Activities:</p>
+        <div class="containerline"></div>
+        <p class="popup_beskrivelse"></p>
+        <p class="pris"></p>
+
         <button class="bestil_rejse">Bestil rejse</button>
       </article>
     </div>
