--- a/couples-s.html
+++ b/couples-s.html
@@ -4,37 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="couples.css" />
     <link rel="stylesheet" href="mutual.css" />
-    <title>Contacts</title>
-    <style>
-      /* @mediaquery til at sætte indholdet i grid når skærmen er over 660pixels*/
-      @media (min-width: 600px) {
-        .grid_1-1 {
-          display: grid;
-          grid-template-columns: 1fr 1fr;
-          gap: 20px;
-        }
-        /* order så billedet kommer først i mobile version men sidst i web-version*/
-        .order {
-          order: 2;
-        }
-      }
-      h3 {
-        font-family: ;
-        font-size: ;
-        line-height: ;
-        font-weight: ;
-        margin-bottom: ;
-        color: #ce6433;
-      }
-      element_4 h3 {
-        color: #59a1b8;
-      }
-      .couples {
-        padding: ;
-      }
-    </style>
+    <title>couples</title>
   </head>
   <body>
     <header></header>
