--- a/couples.html
+++ b/couples.html
@@ -4,10 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="couples.css" />
     <link rel="stylesheet" href="mutual.css" />
-    <title>Contacts</title>
+    <title>couples</title>
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main class="couples">
+      <div class="grid_1-1">
+        <div class="element_1">
+          <img src="" alt="" />
+        </div>
+        <div class="element_2">
+          <h3>Paula & Jack</h3>
+          <p>consectetur adipisicing elit. Adipisci nostrum expedita necessitatibus, sunt natus neque facere vitae error fugit rerum, placeat laborum, fugiat iste dignissimos tempore labore fuga porro. Veritatis quo quis et minus eveniet, consequatur non voluptas nostrum reiciendis placeat adipisci iste doloribus dignissimos labore est, eum pariatur culpa dolorum tenetur omnis</p>
+        </div>
+        <div class="element_3 order">
+          <img src="" alt="" />
+        </div>
+        <div class="element_4">
+          <h3>Emma & Chris</h3>
+          <p>consectetur adipisicing elit. Adipisci nostrum expedita necessitatibus, sunt natus neque facere vitae error fugit rerum, placeat laborum, fugiat iste dignissimos tempore labore fuga porro. Veritatis quo quis et minus eveniet, consequatur non voluptas nostrum reiciendis placeat adipisci iste doloribus dignissimos labore est, eum pariatur culpa dolorum tenetur omnis</p>
+        </div>
+        <div class="element_5">
+          <img src="" alt="" />
+        </div>
+        <div class="element_6">
+          <h3>Erica & James k</h3>
+          <p>consectetur adipisicing elit. Adipisci nostrum expedita necessitatibus, sunt natus neque facere vitae error fugit rerum, placeat laborum, fugiat iste dignissimos tempore labore fuga porro. Veritatis quo quis et minus eveniet, consequatur non voluptas nostrum reiciendis placeat adipisci iste doloribus dignissimos labore est, eum pariatur culpa dolorum tenetur omnis</p>
+        </div>
+      </div>
+    </main>
+  </body>
   <script src="script.js"></script>
 </html>
