--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <nav>
           <ul>
             <div class="flex">
-              <li><a href="side2.html">ABOUT</a></li>
-              <li><a href="side3.html">DESTINATIONS</a></li>
-              <li><a href="side4.html">CONTACT</a></li>
+              <li><a href="about.html">ABOUT</a></li>
+              <li><a href="destination.html">DESTINATIONS</a></li>
+              <li><a href="couples.html">CONTACT</a></li>
             </div>
             <div class="signin">
               <li><a href="#">SIGN IN</a></li>
