--- a/destination.html
+++ b/destination.html
@@ -74,7 +74,36 @@
       </article>
     </div>
 
-    <footer></footer>
+    <footer>
+      <div class="grid_1-1-1">
+        <div class="col1">
+          <h3>LEGAL</h3>
+          <p>Privacy</p>
+          <p>Terms</p>
+          <p>Cookie Policy</p>
+          <p>Intellectual Policy</p>
+        </div>
+        <div class="col2">
+          <h3>CAREERS</h3>
+          <p>Careers Portal</p>
+          <p>Tech Blog</p>
+        </div>
+        <div class="col3">
+          <h3>SOCIAL</h3>
+          <div class="container">
+            <img src="ikoner/insta.svg" alt="insta" />
+            <img src="ikoner/fb.svg" alt="fb" />
+            <img src="ikoner/twitter.svg" alt="twitter" />
+          </div>
+        </div>
+        <div class="col4">
+          <p>FAQ</p>
+          <p>Press</p>
+          <p>Contact</p>
+        </div>
+        <p id="copy">© 2022 Our Destination, All Rights Reserved.</p>
+      </div>
+    </footer>
   </body>
 
   <script src="script.js"></script>
