--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div>
           <img src="ikoner/match.svg" alt="signin" class="circle" />
-          <h3>4. We find your soulmate</h3>
+          <h3>4. Meet your soulmate</h3>
           <p class="hide">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias, officia! Lorem ipsum dolor sit amet.</p>
         </div>
       </div>
