--- a/couples.html
+++ b/couples.html
@@ -9,28 +9,42 @@
     <title>couples</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <div>
+        <a href="index.html"><img class="logo" src="ikoner/logo_sort.webp" alt="company_logo" /></a>
+      </div>
+      <nav>
+        <ul>
+          <li class="toggle_about"><a href="about.html">ABOUT</a></li>
+          <li class="toggle_destination"><a href="destination.html">DESTINATION</a></li>
+          <li class="toggle_couples"><a href="couples.html">COUPLES</a></li>
+        </ul>
+      </nav>
+      <p class="sign_in">SIGN IN</p>
+    </header>
+    <div><img class="header_billede" src="fotos/header_billede.webp" alt="romantisk_billede" /></div>
+
     <main class="couples">
       <div class="grid_1-1">
         <div class="element_1">
-          <img src="" alt="" />
+          <img src="fotos/couples_1.webp" alt="Paula&Jack" />
         </div>
         <div class="element_2">
           <h3>Paula & Jack</h3>
           <p>consectetur adipisicing elit. Adipisci nostrum expedita necessitatibus, sunt natus neque facere vitae error fugit rerum, placeat laborum, fugiat iste dignissimos tempore labore fuga porro. Veritatis quo quis et minus eveniet, consequatur non voluptas nostrum reiciendis placeat adipisci iste doloribus dignissimos labore est, eum pariatur culpa dolorum tenetur omnis</p>
         </div>
         <div class="element_3 order">
-          <img src="" alt="" />
+          <img src="fotos/couples_2.webp" alt="Emma&Chris" />
         </div>
         <div class="element_4">
           <h3>Emma & Chris</h3>
           <p>consectetur adipisicing elit. Adipisci nostrum expedita necessitatibus, sunt natus neque facere vitae error fugit rerum, placeat laborum, fugiat iste dignissimos tempore labore fuga porro. Veritatis quo quis et minus eveniet, consequatur non voluptas nostrum reiciendis placeat adipisci iste doloribus dignissimos labore est, eum pariatur culpa dolorum tenetur omnis</p>
         </div>
         <div class="element_5">
-          <img src="" alt="" />
+          <img src="fotos/couples_3.webp" alt="Erica&James" />
         </div>
         <div class="element_6">
-          <h3>Erica & James k</h3>
+          <h3>Erica & James</h3>
           <p>consectetur adipisicing elit. Adipisci nostrum expedita necessitatibus, sunt natus neque facere vitae error fugit rerum, placeat laborum, fugiat iste dignissimos tempore labore fuga porro. Veritatis quo quis et minus eveniet, consequatur non voluptas nostrum reiciendis placeat adipisci iste doloribus dignissimos labore est, eum pariatur culpa dolorum tenetur omnis</p>
         </div>
       </div>
