--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     </section>
 
     <section>
-      <div>
-        <img src="fotos/travel.png" alt="travel" />
-        <div>
+      <div class="container_travel">
+        <img class="travelimg" src="fotos/travel.png" alt="travel" />
+        <div class="text_block">
           <p>TRAVEL INTO YOUR FUTURE</p>
         </div>
       </div>
