--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 
     <div><img class="header_billede" src="fotos/header_billede.webp" alt="romantisk_billede" /></div>
 
-    <h1>The Story Behind the Idea</h1>
+    <h1>The Story Behind The Idea</h1>
 
     <main>
       <div class="grid">
