--- a/couples.html
+++ b/couples.html
@@ -33,6 +33,8 @@
           <h3>Paula & Jack</h3>
           <p>consectetur adipisicing elit. Adipisci nostrum expedita necessitatibus, sunt natus neque facere vitae error fugit rerum, placeat laborum, fugiat iste dignissimos tempore labore fuga porro. Veritatis quo quis et minus eveniet, consequatur non voluptas nostrum reiciendis placeat adipisci iste doloribus dignissimos labore est, eum pariatur culpa dolorum tenetur omnis</p>
         </div>
+      </div>
+      <div class="grid_1-1">
         <div class="element_3 order">
           <img src="fotos/couples_2.webp" alt="Emma&Chris" />
         </div>
@@ -40,6 +42,8 @@
           <h3>Emma & Chris</h3>
           <p>consectetur adipisicing elit. Adipisci nostrum expedita necessitatibus, sunt natus neque facere vitae error fugit rerum, placeat laborum, fugiat iste dignissimos tempore labore fuga porro. Veritatis quo quis et minus eveniet, consequatur non voluptas nostrum reiciendis placeat adipisci iste doloribus dignissimos labore est, eum pariatur culpa dolorum tenetur omnis</p>
         </div>
+      </div>
+      <div class="grid_1-1">
         <div class="element_5">
           <img src="fotos/couples_3.webp" alt="Erica&James" />
         </div>
@@ -49,36 +53,6 @@
         </div>
       </div>
     </main>
-    <footer>
-      <div class="grid_1-1-1">
-        <div class="col1">
-          <h3>LEGAL</h3>
-          <p>Privacy</p>
-          <p>Terms</p>
-          <p>Cookie Policy</p>
-          <p>Intellectual Policy</p>
-        </div>
-        <div class="col2">
-          <h3>CAREERS</h3>
-          <p>Careers Portal</p>
-          <p>Tech Blog</p>
-        </div>
-        <div class="col3">
-          <h3>SOCIAL</h3>
-          <div class="container">
-            <img src="ikoner/insta.svg" alt="insta" />
-            <img src="ikoner/fb.svg" alt="fb" />
-            <img src="ikoner/twitter.svg" alt="twitter" />
-          </div>
-        </div>
-        <div class="col4">
-          <p>FAQ</p>
-          <p>Press</p>
-          <p>Contact</p>
-        </div>
-        <p id="copy">© 2022 Our Destination, All Rights Reserved.</p>
-      </div>
-    </footer>
   </body>
   <script src="script.js"></script>
 </html>
