--- a/couples.html
+++ b/couples.html
@@ -39,7 +39,7 @@
           <img src="fotos/couples_2.webp" alt="Emma&Chris" />
         </div>
         <div class="element_4">
-          <h3>Emma & Chris</h3>
+          <h3 class="blå">Emma & Chris</h3>
           <p>consectetur adipisicing elit. Adipisci nostrum expedita necessitatibus, sunt natus neque facere vitae error fugit rerum, placeat laborum, fugiat iste dignissimos tempore labore fuga porro. Veritatis quo quis et minus eveniet, consequatur non voluptas nostrum reiciendis placeat adipisci iste doloribus dignissimos labore est, eum pariatur culpa dolorum tenetur omnis</p>
         </div>
       </div>
