--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="flex">
               <li><a href="about.html">ABOUT</a></li>
               <li><a href="destination.html">DESTINATIONS</a></li>
-              <li><a href="couples.html">CONTACT</a></li>
+              <li><a href="couples.html">COUPLES</a></li>
             </div>
             <div class="signin">
               <li><a href="#">SIGN IN</a></li>
