--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main class="splash">
       <header class="grid2_1-1-1">
         <div class="logo">
-          <a href="index.html"> <img src="fotos/logoFINAL_WHITE.svg" alt="logo" class="logoimg" /></a>
+          <a href="index.html"> <img src="fotos/mindre_logo3.png" alt="logo" class="logoimg" /></a>
         </div>
         <nav>
           <ul>
