couples almost there

--- a/couples.html
+++ b/couples.html
@@ -30,7 +30,7 @@
           <img src="fotos/couples_1.webp" alt="Paula&Jack" />
         </div>
         <div class="element_2">
-          <h3>Paula & Jack</h3>
+          <h3>PAULA & JACK</h3>
           <p>consectetur adipisicing elit. Adipisci nostrum expedita necessitatibus, sunt natus neque facere vitae error fugit rerum, placeat laborum, fugiat iste dignissimos tempore labore fuga porro. Veritatis quo quis et minus eveniet, consequatur non voluptas nostrum reiciendis placeat adipisci iste doloribus dignissimos labore est, eum pariatur culpa dolorum tenetur omnis</p>
         </div>
       </div>
@@ -39,7 +39,7 @@
           <img src="fotos/couples_2.webp" alt="Emma&Chris" />
         </div>
         <div class="element_4">
-          <h3 class="blå">Emma & Chris</h3>
+          <h3 class="blå">EMMA & CHRIS</h3>
           <p>consectetur adipisicing elit. Adipisci nostrum expedita necessitatibus, sunt natus neque facere vitae error fugit rerum, placeat laborum, fugiat iste dignissimos tempore labore fuga porro. Veritatis quo quis et minus eveniet, consequatur non voluptas nostrum reiciendis placeat adipisci iste doloribus dignissimos labore est, eum pariatur culpa dolorum tenetur omnis</p>
         </div>
       </div>
@@ -48,11 +48,41 @@
           <img src="fotos/couples_3.webp" alt="Erica&James" />
         </div>
         <div class="element_6">
-          <h3>Erica & James</h3>
+          <h3>ERICA & JAMES</h3>
           <p>consectetur adipisicing elit. Adipisci nostrum expedita necessitatibus, sunt natus neque facere vitae error fugit rerum, placeat laborum, fugiat iste dignissimos tempore labore fuga porro. Veritatis quo quis et minus eveniet, consequatur non voluptas nostrum reiciendis placeat adipisci iste doloribus dignissimos labore est, eum pariatur culpa dolorum tenetur omnis</p>
         </div>
       </div>
     </main>
+    <footer>
+      <div class="grid_1-1-1">
+        <div class="col1">
+          <h3>LEGAL</h3>
+          <p>Privacy</p>
+          <p>Terms</p>
+          <p>Cookie Policy</p>
+          <p>Intellectual Policy</p>
+        </div>
+        <div class="col2">
+          <h3>CAREERS</h3>
+          <p>Careers Portal</p>
+          <p>Tech Blog</p>
+        </div>
+        <div class="col3">
+          <h3>SOCIAL</h3>
+          <div class="container">
+            <img src="ikoner/insta.svg" alt="insta" />
+            <img src="ikoner/fb.svg" alt="fb" />
+            <img src="ikoner/twitter.svg" alt="twitter" />
+          </div>
+        </div>
+        <div class="col4">
+          <p>FAQ</p>
+          <p>Press</p>
+          <p>Contact</p>
+        </div>
+        <p id="copy">© 2022 Our Destination, All Rights Reserved.</p>
+      </div>
+    </footer>
   </body>
   <script src="script.js"></script>
 </html>
