--- a/about.html
+++ b/about.html
@@ -9,18 +9,22 @@
     <title>About</title>
   </head>
   <body>
-    <header>
-      <div>
-        <a href="index.html"><img class="logo" src="ikoner/logo_sort.webp" alt="company_logo" /></a>
+    <header class="grid2_1-1-1">
+      <div class="logo2">
+        <a href="index.html"> <img src="fotos/logo_sort.png" alt="logo" class="logoimg2" /></a>
       </div>
-      <nav>
-        <ul>
-          <li class="toggle_about"><a href="about.html">ABOUT</a></li>
-          <li class="toggle_destination"><a href="destination.html">DESTINATION</a></li>
-          <li class="toggle_couples"><a href="couples.html">COUPLES</a></li>
+      <nav class="nav2">
+        <ul class="ul2">
+          <div class="flex2">
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="destination.html">DESTINATIONS</a></li>
+            <li><a href="couples.html">COUPLES</a></li>
+          </div>
+          <div class="signin2">
+            <li><a href="#">SIGN IN</a></li>
+          </div>
         </ul>
       </nav>
-      <p class="sign_in">SIGN IN</p>
     </header>
 
     <div><img class="header_billede" src="fotos/header_billede.webp" alt="romantisk_billede" /></div>
