--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
       <div class="grid_1-1-1-1">
         <div>
           <img src="ikoner/sign_in.svg" alt="signin" class="circle" />
-          <h3>1. Sign In</h3>
+          <h3 class="tyk">1. Sign In</h3>
           <p class="hide">Create an account and fill in the attached application with preferences and wishes for the perfect dream date.</p>
         </div>
         <div>
           <img src="ikoner/choose.svg" alt="choose" class="circle" />
-          <h3>2. Choose your destination</h3>
+          <h3 class="tyk">2. Choose your destination</h3>
           <p class="hide">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus sequi dolorum voluptates vitae expedita.</p>
         </div>
         <div>
           <img src="ikoner/bag.svg" alt="signin" class="circle" />
-          <h3>3. Pack your things</h3>
+          <h3 class="tyk">3. Pack your things</h3>
           <p class="hide">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus itaque blanditiis repellat qui.</p>
         </div>
         <div>
           <img src="ikoner/match.svg" alt="signin" class="circle" />
-          <h3>4. Meet your soulmate</h3>
+          <h3 class="tyk">4. Meet your soulmate</h3>
           <p class="hide">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias, officia! Lorem ipsum dolor sit amet.</p>
         </div>
       </div>
