popup tredje billede

--- a/destination.html
+++ b/destination.html
@@ -59,9 +59,12 @@
       <article>
         <h2 class="destination"></h2>
         <div class="gold_line"></div>
+        <h3 class="pakke"></h3>
+
         <div class="img-stack">
           <img class="popup_billede1" src="" alt="" />
           <img class="popup_billede2" src="" alt="" />
+          <img class="popup_billede3" src="" alt="" />
         </div>
         <p class="hotel">Hotel:</p>
         <p class="restauranter">Restaurant:</p>
