--- a/destination.html
+++ b/destination.html
@@ -70,9 +70,12 @@
           <img class="popup_billede2" src="" alt="" />
           <img class="popup_billede3" src="" alt="" />
         </div>
-        <p class="hotel">Hotel:</p>
-        <p class="restauranter">Restaurant:</p>
-        <p class="oplevelser">Activities:</p>
+
+        <div class="info_tekst">
+          <p class="hotel">Hotel:</p>
+          <p class="restauranter">Restaurant:</p>
+          <p class="oplevelser">Activities:</p>
+        </div>
         <div class="containerline"></div>
         <p class="popup_beskrivelse"></p>
         <p class="pris"></p>
