toggle menu done

--- a/couples.html
+++ b/couples.html
@@ -9,16 +9,16 @@
     <title>couples</title>
   </head>
   <body>
-    <header class="grid2_1-1-1">
+      <header class="grid2_1-1-1">
       <div class="logo2">
         <a href="index.html"> <img src="fotos/logo_sort.png" alt="logo" class="logoimg2" /></a>
       </div>
       <nav class="nav2">
         <ul class="ul2">
           <div class="flex2">
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="destination.html">DESTINATIONS</a></li>
-            <li><a href="couples.html">COUPLES</a></li>
+            <li class="toggle_about"><a href="about.html">ABOUT</a></li>
+            <li class="toggle_destination"><a href="destination.html">DESTINATIONS</a></li>
+            <li class="toggle_couples"><a href="couples.html">COUPLES</a></li>
           </div>
           <div class="signin2">
             <li><a href="#">SIGN IN</a></li>
