--- a/destination.html
+++ b/destination.html
@@ -17,9 +17,9 @@
       <nav class="nav2">
         <ul class="ul2">
           <div class="flex2">
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="destination.html">DESTINATIONS</a></li>
-            <li><a href="couples.html">COUPLES</a></li>
+            <li class="toggle_about"><a href="about.html">ABOUT</a></li>
+            <li class="toggle_destination"><a href="destination.html">DESTINATIONS</a></li>
+            <li class="toggle_couples"><a href="couples.html">COUPLES</a></li>
           </div>
           <div class="signin2">
             <li><a href="#">SIGN IN</a></li>
