--- a/couples.html
+++ b/couples.html
@@ -9,9 +9,9 @@
     <title>couples</title>
   </head>
   <body>
-      <header class="grid2_1-1-1">
+    <header class="grid2_1-1-1">
       <div class="logo2">
-        <a href="index.html"> <img src="fotos/logo_sort.png" alt="logo" class="logoimg2" /></a>
+        <a href="index.html"> <img src="fotos/logo_sort.webp" alt="logo" class="logoimg2" /></a>
       </div>
       <nav class="nav2">
         <ul class="ul2">
@@ -57,7 +57,7 @@
         </div>
       </div>
     </main>
-   <footer>
+    <footer>
       <div class="grid_1-1-1">
         <div class="col1">
           <h3>LEGAL</h3>
@@ -90,7 +90,6 @@
         <p id="copy">© 2022 Our Destination, All Rights Reserved.</p>
       </div>
     </footer>
-
   </body>
   <script src="script.js"></script>
 </html>
