--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main class="splash">
       <header class="grid2_1-1-1">
         <div class="logo">
-          <a href="index.html"> <img src="fotos/mindre_logo3.png" alt="logo" class="logoimg" /></a>
+          <a href="index.html"> <img src="fotos/mindre_logo3.webp" alt="logo" class="logoimg" /></a>
         </div>
         <nav>
           <ul>
@@ -28,12 +28,10 @@
           </ul>
         </nav>
       </header>
-
       <section id="splashtext">
         <p>SIMPLE WAY TO FIND</p>
         <p id="splashtext2">(Y)OUR DESTINATION</p>
         <p>AND FIND LOVE.</p>
-        <img class="arrow_down" src="ikoner/arrow_down.png" alt="pilned" />
       </section>
     </main>
 
@@ -64,7 +62,7 @@
 
     <section>
       <div class="container_travel">
-        <img class="travelimg" src="fotos/travel.png" alt="travel" />
+        <img class="travelimg" src="fotos/travel.webp" alt="travel" />
         <div class="text_block">
           <p>TRAVEL INTO YOUR FUTURE</p>
         </div>
@@ -92,14 +90,11 @@
             <img src="ikoner/fb.svg" alt="fb" />
             <img src="ikoner/twitter.svg" alt="twitter" />
           </div>
-          <p>Phone: 30 45 23 12 23</p>
-          <p>E-mail: lovedoctor@24live.com</p>
         </div>
         <div class="col4">
-          <h3>CONTACT</h3>
           <p>FAQ</p>
           <p>Press</p>
-          <p>Contact us</p>
+          <p>Contact</p>
         </div>
         <p id="copy">© 2022 Our Destination, All Rights Reserved.</p>
       </div>
