--- a/destination.html
+++ b/destination.html
@@ -12,7 +12,7 @@
   <body>
     <header class="grid2_1-1-1">
       <div class="logo2">
-        <a href="index.html"> <img src="fotos/logo_sort.png" alt="logo" class="logoimg2" /></a>
+        <a href="index.html"> <img src="fotos/logo_sort.webp" alt="logo" class="logoimg2" /></a>
       </div>
       <nav class="nav2">
         <ul class="ul2">
@@ -84,7 +84,7 @@
       </article>
     </div>
 
-      <footer>
+    <footer>
       <div class="grid_1-1-1">
         <div class="col1">
           <h3>LEGAL</h3>
