--- a/couples.html
+++ b/couples.html
@@ -9,7 +9,7 @@
     <title>couples</title>
   </head>
   <body>
-      <header class="grid2_1-1-1">
+    <header class="grid2_1-1-1">
       <div class="logo2">
         <a href="index.html"> <img src="fotos/logo_sort.png" alt="logo" class="logoimg2" /></a>
       </div>
@@ -27,6 +27,8 @@
       </nav>
     </header>
     <div><img class="header_billede" src="fotos/header_billede.webp" alt="romantisk_billede" /></div>
+
+    <h1>Succesful couples</h1>
 
     <main class="couples">
       <div class="grid_1-1">
@@ -57,7 +59,7 @@
         </div>
       </div>
     </main>
-   <footer>
+    <footer>
       <div class="grid_1-1-1">
         <div class="col1">
           <h3>LEGAL</h3>
@@ -90,7 +92,6 @@
         <p id="copy">© 2022 Our Destination, All Rights Reserved.</p>
       </div>
     </footer>
-
   </body>
   <script src="script.js"></script>
 </html>
