--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <p>SIMPLE WAY TO FIND</p>
         <p id="splashtext2">(Y)OUR DESTINATION</p>
         <p>AND FIND LOVE.</p>
+        <img class="arrow_down" src="ikoner/arrow_down.png" alt="arrow_down" />
       </section>
     </main>
 
