--- a/couples.html
+++ b/couples.html
@@ -11,7 +11,7 @@
   <body>
     <header class="grid2_1-1-1">
       <div class="logo2">
-        <a href="index.html"> <img src="fotos/logo_sort.webp" alt="logo" class="logoimg2" /></a>
+        <a href="index.html"> <img src="fotos/logo_sort.png" alt="logo" class="logoimg2" /></a>
       </div>
       <nav class="nav2">
         <ul class="ul2">
