--- a/destination.html
+++ b/destination.html
@@ -12,7 +12,7 @@
   <body>
     <header class="grid2_1-1-1">
       <div class="logo2">
-        <a href="index.html"> <img src="fotos/logo_sort.webp" alt="logo" class="logoimg2" /></a>
+        <a href="index.html"> <img src="fotos/logo_sort.png" alt="logo" class="logoimg2" /></a>
       </div>
       <nav class="nav2">
         <ul class="ul2">
@@ -105,19 +105,15 @@
             <img src="ikoner/fb.svg" alt="fb" />
             <img src="ikoner/twitter.svg" alt="twitter" />
           </div>
-          <p>Phone: 30 45 23 12 23</p>
-          <p>E-mail: lovedoctor@24live.com</p>
         </div>
         <div class="col4">
-          <h3>CONTACT</h3>
           <p>FAQ</p>
           <p>Press</p>
-          <p>Contact us</p>
+          <p>Contact</p>
         </div>
         <p id="copy">© 2022 Our Destination, All Rights Reserved.</p>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
-
-  <script src="script.js"></script>
 </html>
