--- a/index.html
+++ b/index.html
@@ -16,23 +16,20 @@
           <a href="index.html"> <img src="fotos/mindre_logo3.webp" alt="logo" class="logoimg" /></a>
         </div>
         <nav>
-          <ul>
-            <div class="flex">
-              <li><a href="about.html">ABOUT</a></li>
-              <li><a href="destination.html">DESTINATIONS</a></li>
-              <li><a href="couples.html">COUPLES</a></li>
-            </div>
-            <div class="signin">
-              <li><a href="#">SIGN IN</a></li>
-            </div>
+          <ul class="menu">
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="destination.html">DESTINATIONS</a></li>
+            <li><a href="couples.html">COUPLES</a></li>
           </ul>
         </nav>
       </header>
-      <section id="splashtext">
-        <p>SIMPLE WAY TO FIND</p>
-        <p id="splashtext2">(Y)OUR DESTINATION</p>
-        <p>AND FIND LOVE.</p>
-      </section>
+      <figure>
+        <div id="splashtext">
+          <p>SIMPLE WAY TO FIND</p>
+          <p id="splashtext2">(Y)OUR DESTINATION</p>
+          <p>AND FIND LOVE.</p>
+        </div>
+      </figure>
     </main>
 
     <section>
@@ -62,7 +59,7 @@
 
     <section>
       <div class="container_travel">
-        <img class="travelimg" src="fotos/travel.webp" alt="travel" />
+        <img class="travelimg" src="fotos/travel.we" alt="travel" />
         <div class="text_block">
           <p>TRAVEL INTO YOUR FUTURE</p>
         </div>
@@ -99,6 +96,6 @@
         <p id="copy">© 2022 Our Destination, All Rights Reserved.</p>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
-  <script src="script.js"></script>
 </html>
