--- a/about.html
+++ b/about.html
@@ -13,16 +13,11 @@
       <div class="logo2">
         <a href="index.html"> <img src="fotos/logo_sort.webp" alt="logo" class="logoimg2" /></a>
       </div>
-      <nav class="nav2">
-        <ul class="ul2">
-          <div class="flex2">
-            <li class="toggle_about"><a href="about.html">ABOUT</a></li>
-            <li class="toggle_destination"><a href="destination.html">DESTINATIONS</a></li>
-            <li class="toggle_couples"><a href="couples.html">COUPLES</a></li>
-          </div>
-          <div class="signin2">
-            <li><a href="#">SIGN IN</a></li>
-          </div>
+      <nav>
+        <ul class="menu">
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="destination.html">DESTINATIONS</a></li>
+          <li><a href="couples.html">COUPLES</a></li>
         </ul>
       </nav>
     </header>
