--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </ul>
         </nav>
       </header>
-<<<<<<< HEAD
+
       <figure>
         <div id="splashtext">
           <p>SIMPLE WAY TO FIND</p>
@@ -31,14 +31,6 @@
           <p>AND FIND LOVE.</p>
         </div>
       </figure>
-=======
-      <section id="splashtext">
-        <p>SIMPLE WAY TO FIND</p>
-        <p id="splashtext2">(Y)OUR DESTINATION</p>
-        <p>AND FIND LOVE.</p>
-        <img class="arrow_down" src="ikoner/arrow_down.png" alt="arrow_down" />
-      </section>
->>>>>>> 5aa808e4f9ff845d72af88755edffe3e5c22d2c7
     </main>
 
     <section>
@@ -68,7 +60,7 @@
 
     <section>
       <div class="container_travel">
-        <img class="travelimg" src="fotos/travel.we" alt="travel" />
+        <img class="travelimg" src="fotos/travel.webp" alt="travel" />
         <div class="text_block">
           <p>TRAVEL INTO YOUR FUTURE</p>
         </div>
