--- a/destination.html
+++ b/destination.html
@@ -15,7 +15,7 @@
         <a href="index.html"> <img src="fotos/logo_sort.webp" alt="logo" class="logoimg2" /></a>
       </div>
       <nav>
-        <ul class="menu">
+        <ul class="menu2">
           <li><a href="about.html">ABOUT</a></li>
           <li><a href="destination.html">DESTINATIONS</a></li>
           <li><a href="couples.html">COUPLES</a></li>
