--- a/couples.html
+++ b/couples.html
@@ -19,6 +19,7 @@
           <li><a href="destination.html">DESTINATIONS</a></li>
           <li><a href="couples.html">COUPLES</a></li>
         </ul>
+        <div class="signin"><p>SIGN IN</p></div>
       </nav>
     </header>
     <div><img class="header_billede" src="fotos/header_billede.webp" alt="romantisk_billede" /></div>
