--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
           <li><a href="destination.html">DESTINATIONS</a></li>
           <li><a href="couples.html">COUPLES</a></li>
         </ul>
+        <div class="signin"><p>SIGN IN</p></div>
       </nav>
     </header>
 
