--- a/destination.html
+++ b/destination.html
@@ -20,6 +20,7 @@
           <li><a href="destination.html">DESTINATIONS</a></li>
           <li><a href="couples.html">COUPLES</a></li>
         </ul>
+        <div class="signin"><p>SIGN IN</p></div>
       </nav>
     </header>
 
@@ -100,15 +101,19 @@
             <img src="ikoner/fb.svg" alt="fb" />
             <img src="ikoner/twitter.svg" alt="twitter" />
           </div>
+          <p>Phone: 30 45 23 12 23</p>
+          <p>E-mail: lovedoctor@24live.com</p>
         </div>
         <div class="col4">
+          <h3>CONTACT</h3>
           <p>FAQ</p>
           <p>Press</p>
-          <p>Contact</p>
+          <p>Contact us</p>
         </div>
         <p id="copy">© 2022 Our Destination, All Rights Reserved.</p>
       </div>
     </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
