--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="destination.html">DESTINATIONS</a></li>
             <li><a href="couples.html">COUPLES</a></li>
           </ul>
+          <div class="signin"><p>SIGN IN</p></div>
         </nav>
       </header>
 
