--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <p>SIMPLE WAY TO FIND</p>
           <p id="splashtext2">(Y)OUR DESTINATION</p>
           <p>AND FIND LOVE.</p>
+          <img class="arrow_down" src="ikoner/arrow_down.png" alt="pil ned" />
         </div>
       </figure>
     </main>
