--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
           </div>
         </div>
         <div class="col4">
+          <h3>CONTACT</h3>
           <p>FAQ</p>
           <p>Press</p>
-          <p>Contact</p>
+          <p>Contact us</p>
         </div>
         <p id="copy">© 2022 Our Destination, All Rights Reserved.</p>
       </div>
